feat: search by rut